k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: circuit-management
  labels:
    name: circuit-management
